--- a/src/main/resources/templates/Admin/ActividadAdd.html
+++ b/src/main/resources/templates/Admin/ActividadAdd.html
@@ -167,7 +167,7 @@
                                                                     </div>
                                                                 <div class="form-floating">
                                                                         <input type="date" class="form-control" id="floatingPassword" placeholder="Password">
-                                                                            <label for="fechafin">Descripcion</label>
+                                                                            <label for="fechafin">Fecha FIn</label>
                                                                     </div>
 
                                                                     <div class="checkbox mb-3">
