--- a/src/main/resources/templates/Admin/ActividadAdd.html
+++ b/src/main/resources/templates/Admin/ActividadAdd.html
@@ -11,7 +11,7 @@
                             <title>Dashboard Template · Bootstrap v5.0</title>
 
                             <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/dashboard/">
-                                
+
 
 
 
@@ -149,36 +149,41 @@
 
 
                                                         <h2 th:text="${Create}">Section title</h2>
-                                                       
-                                                            <form>
-                                                               
 
-                                                                    <div class="form-floating">
-                                                                        <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-                                                                            <label for="titulo">Titulo</label>
-                                                                    </div>
-                                                                    <div class="form-floating">
-                                                                        <input type="text" class="form-control" id="floatingPassword" placeholder="Password">
-                                                                            <label for="descripcion">Descripcion</label>
-                                                                    </div>
-                                                                <div class="form-floating">
-                                                                        <input type="date" class="form-control" id="floatingPassword" placeholder="Password">
-                                                                            <label for="fechainicio">Fecha Inicio</label>
-                                                                    </div>
-                                                                <div class="form-floating">
-                                                                        <input type="date" class="form-control" id="floatingPassword" placeholder="Password">
-                                                                            <label for="fechafin">Fecha FIn</label>
-                                                                    </div>
+                                                        <form>
 
-                                                                    <div class="checkbox mb-3">
-                                                                        <label>
-                                                                            <input type="checkbox" value="remember-me"> Remember me
-                                                                        </label>
-                                                                    </div>
-                                                                    <a th:href="@{/Admin/home}" class="w-100 btn btn-lg btn-primary" type="submit">Sign in</a>
-                                                                    <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
-                                                            </form>
-                                                       
+
+                                                            <div class="form-floating">
+                                                                <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+                                                                    <label for="titulo">Titulo</label>
+                                                            </div>
+                                                            <div class="form-floating">
+                                                                <input type="text" class="form-control" id="floatingPassword" placeholder="Password">
+                                                                    <label for="descripcion">Descripcion</label>
+                                                            </div>
+                                                            <div class="form-floating">
+                                                                <input type="date" class="form-control" id="floatingPassword" placeholder="Password">
+                                                                    <label for="fechainicio">Fecha Inicio</label>
+                                                            </div>
+                                                            <div class="form-floating">
+                                                                <input type="date" class="form-control" id="floatingPassword" placeholder="Password">
+                                                                    <label for="fechafin">Fecha FIn</label>
+                                                            </div>
+
+                                                            <div class="form-floating">
+                                                                <label for="cars">Choose a car:</label>
+
+                                                                <select name="cars" id="cars" class="form-control">
+                                                                    <option value="volvo">Volvo</option>
+                                                                    <option value="saab">Saab</option>
+                                                                    <option value="mercedes">Mercedes</option>
+                                                                    <option value="audi">Audi</option>
+                                                                </select>
+                                                            </div>
+                                                            <a th:href="@{/Admin/home}" class="w-100 btn btn-lg btn-primary" type="submit">Sign in</a>
+                                                            <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+                                                        </form>
+
                                                     </main>
                                                 </div>
                                             </div>
