--- a/src/main/resources/templates/index1.html
+++ b/src/main/resources/templates/index1.html
@@ -58,7 +58,7 @@
         <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div>
-    <a th:href="@{/Admin/home}" class="w-100 btn btn-lg btn-primary" type="submit">Sign in</a>
+    <a th:href="@{/home}" class="w-100 btn btn-lg btn-primary" type="submit">Sign in</a>
     <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
   </form>
 </main>
