--- a/src/main/resources/templates/Admin/Usuarios.html
+++ b/src/main/resources/templates/Admin/Usuarios.html
@@ -40,7 +40,7 @@
   <body>
     
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">Company name</a>
+  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" th:href="@{/home}">Company name</a>
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -166,8 +166,8 @@
               <td th:password="${atv.contrasena}">data</td>
               <td th:text="${atv.idtipousu.nombre}">placeholder</td>
               <td>
-                  <a class="btn btn-outline-secondary" href="#">Edit</a>
-                  <a class="btn btn-outline-secondary" href="#">Delete</a>
+                  <a class="btn btn-outline-secondary" th:href="@{/Admin/editUsuario/}+${atv.idusuario}">Edit</a>
+                  <a class="btn btn-outline-secondary" th:href="@{/Admin/deleteUsuario/}+${atv.idusuario}">Delete</a>
               </td>
             </tr>
            
