--- a/src/main/resources/templates/Admin/periodoAdd.html
+++ b/src/main/resources/templates/Admin/periodoAdd.html
@@ -159,7 +159,7 @@
                                                             </div>
                                                             <div class="form-group">
                                                                 <label class="col-md-2" for="fechafin">Fin de Periodo Lectivo</label>
-                                                                <input  th:field="*{fechafin}" type="text" class="form-control form-control-sm col-md-6" id="fechafin" placeholder="Descripcion Recurso">
+                                                                <input  th:field="*{fechafin}" type="date" class="form-control form-control-sm col-md-6" id="fechafin" placeholder="Descripcion Recurso">
                                                                     <small></small>
                                                             </div>
                                                             <div class="form-group">
