--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -97,7 +97,7 @@
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Actividades Academicas.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                     <a type="button" class="btn btn-sm btn-outline-secondary" th:href="@{/Admin/listaActividad}">View</a>
@@ -113,7 +113,7 @@
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Tipos De Usuarios.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                     <a type="button" class="btn btn-sm btn-outline-secondary" th:href="@{/Admin/listatipousuario}">View</a>
@@ -130,7 +130,7 @@
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Tipos de Recursos Escolares.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                     <a type="button" class="btn btn-sm btn-outline-secondary" th:href="@{/TipoRecurso/listaTipoRecursos}">View</a>
@@ -146,7 +146,7 @@
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Tipo de Notas.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                     <a type="button" class="btn btn-sm btn-outline-secondary" th:href="@{/TipoNota/listTipoNota}">View</a>
@@ -162,7 +162,7 @@
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Periodos Academicos.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                     <a type="button" class="btn btn-sm btn-outline-secondary" th:href="@{/Periodo/listPeriodo}">View</a>
