--- a/src/main/resources/templates/Admin/Cursolist.html
+++ b/src/main/resources/templates/Admin/Cursolist.html
@@ -164,7 +164,7 @@
             <tr th:each="atv:${curso}">
               <td scope="row" th:text="${atv.idcurso}">cuenta</td>
               <td scope="row" th:text="${atv.idnivel.grado}">cuenta</td>
-              <td th:text="${atv.idprofesor.idpersona.nombre}">data</td>
+              <td th:text="${atv.idprofesor.idpersona}">data</td>
               <td th:text="${atv.cantidad}">placeholder</td>
               <td th:text="${atv.paralelo}">placeholder</td>
               <td>
