--- a/src/main/resources/templates/Admin/addtiponota.html
+++ b/src/main/resources/templates/Admin/addtiponota.html
@@ -150,7 +150,7 @@
 
                                                         <h2 th:text="${Titulo}">Section title</h2>
 
-                                                        <form class="form-control col-md-3" th:object="${tiponota}" th:action="@{/TipoRecurso/addTipoRecurso}" method="post"> 
+                                                        <form class="form-control col-md-3" th:object="${tiponota}" th:action="@{/TipoNota/addTipoNota}" method="post"> 
                                                             
                                                             <div class="form-group">
                                                                 <label class="col-md-2" for="idtareas">Tipo Tarea</label>
