--- a/src/main/resources/templates/Admin/periodoAdd.html
+++ b/src/main/resources/templates/Admin/periodoAdd.html
@@ -150,7 +150,7 @@
 
                                                         <h2 th:text="${Titulo}">Section title</h2>
 
-                                                        <form class="form-control col-md-3" th:object="${periodol}" th:action="@{/TipoRecurso/addTipoRecurso}" method="post"> 
+                                                        <form class="form-control col-md-3" th:object="${periodol}" th:action="@{/Periodo/addPeriodo}" method="post"> 
                                                             <div class="form-group">
                                                                 <input th:field="*{idperiodo}" type="hidden"/>
                                                                 <label class="col-md-2" for="fechainicio">Inicio Periodo Lectivo</label>
