--- a/src/main/resources/templates/Admin/Cursoadd.html
+++ b/src/main/resources/templates/Admin/Cursoadd.html
@@ -150,7 +150,7 @@
 
                                                         <h2 th:text="${titulo}">Section title</h2>
 
-                                                        <form class="form-control col-md-3" th:object="${usuario}" th:action="@{/Admin/addTipoUser}" method="post"> 
+                                                        <form class="form-control col-md-3" th:object="${usuario}" th:action="@{/Curso/save}" method="post"> 
                                                             <div class="form-group">
                                                                 <label class="col-md-2" for="cuenta">Cuenta</label>
                                                                 <input th:field="*{cuenta}" type="text" class="form-control form-control-sm col-md-6" id="cuenta" placeholder="Usuario">
