--- a/src/main/resources/templates/index1.html
+++ b/src/main/resources/templates/index1.html
@@ -10,7 +10,7 @@
     <meta name="generator" content="Hugo 0.84.0">
     <title>Signin Template · Bootstrap v5.0</title>
 
-    <link rel="canonical" th:href="@{https://getbootstrap.com/docs/5.0/examples/sign-in/}">
+    <link rel="canonical" th:href="@{/https://getbootstrap.com/docs/5.0/examples/sign-in/}">
 
     
 
@@ -41,7 +41,7 @@
     
 <main class="form-signin">
   <form>
-    <img class="mb-4" th:src="@{/img/bootstrap-logo.svg}" alt="" width="72" height="57">
+    <img class="mb-4" th:src="@{/img/workspace_50px.png}" alt="" width="100" height="100">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
     <div class="form-floating">
